src/content/VotingBar.css
#r2c-voting-container {
  position: fixed;
  bottom: 40px;
  right: 0px;

  display: flex;

  background-color: #ddd;

  animation: vote-container-in both 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.15);
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.secarta-vote-button,
.r2c-button,
.secarta-vote-button .vote-icon {
  height: 48px;
  width: 48px;

  display: flex;
  justify-content: center;
  align-items: center;

  color: #fff;
  text-decoration: none;
}

.secarta-vote-button .vote-icon {
  overflow: hidden;
}

.secarta-vote-button {
  background-color: #aaa;
  fill: white;
  transition: background-color 0.3s, fill 0.3s, box-shadow 0.3s;
}

.secarta-vote-button .vote-count {
  position: absolute;
  top: -20px;
  text-decoration: none;
}

.r2c-button {
  background-color: #fff;
  border-right: 1px solid #ddd;
  fill: #0a9bda;
}

.r2c-button.button-private-repository {
  width: inherit;
  padding: 15px;
  background-color: #ddd;
  fill: #777;
  color: #777;
  cursor: default;
  pointer-events: none;
}

.r2c-button.button-private-repository svg {
  margin-right: 10px;
}

.r2c-button svg {
  height: 30px;
}

.secarta-vote-button.vote-success,
.secarta-vote-button.vote-failed {
  animation: vote-submitted both 2s cubic-bezier(0.215, 0.61, 0.355, 1);
  pointer-events: none;
  cursor: not-allowed;
}

.secarta-vote-button.vote-success svg {
  animation: vote-succeeded-icon both 1.5s 0s
    cubic-bezier(0.215, 0.61, 0.355, 1);
}

.secarta-vote-button.vote-failed svg {
  animation: vote-succeeded-icon both 1.5s 0s
    cubic-bezier(0.215, 0.61, 0.355, 1);
}

.secarta-vote-button.vote-success .voted-text,
.secarta-vote-button.vote-failed .voted-text {
  position: absolute;
  animation: vote-succeeded-text both cubic-bezier(0.645, 0.045, 0.355, 1);
  animation-duration: 1.5s;
}

.secarta-vote-button.vote-success .vote-count {
  animation: vote-succeeded-count both cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;
}

.secarta-vote-button.vote-up {
  background-color: #fff;
  fill: #33a02c;
  color: #33a02c;
}

.secarta-vote-button.vote-up.voted {
  background-color: #33a02c;
  fill: #fff;
}

.secarta-vote-button.vote-up:hover {
  background-color: #33a02c;
  fill: #fff;
}

.secarta-vote-button:active {
  box-shadow: inset 0px 0px 20px rgba(255, 255, 255, 0.5);
}

.secarta-vote-button.vote-down {
  background-color: #fff;
  fill: rgb(178, 24, 43);
  color: rgb(178, 24, 43);
}

.secarta-vote-button.vote-down:hover {
  background-color: #d23043;
  fill: #fff;
}

.secarta-vote-button.vote-down.voted {
  background-color: rgb(178, 24, 43);
  fill: #fff;
}

.secarta-vote-button.vote-question {
  background-color: #fff;
  fill: #634dbf;
  color: #634dbf;
}

.secarta-vote-button.vote-question:hover {
  background-color: #634dbf;
  fill: #fff;
}

.secarta-vote-button.vote-question.voted {
  background-color: #634dbf;
  fill: #fff;
}

@keyframes vote-container-in {
  0% {
    right: -144px;
  }

  100% {
    right: 0;
  }
}

@keyframes vote-succeeded-icon {
  0% {
    transform: translateY(0);
  }

  49.99% {
    transform: translateY(-100px);
  }

  50.01% {
    transform: translateY(100px);
  }

  100% {
    transform: translateY(0);
  }
}

@keyframes vote-failed-icon {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(100px);
  }

  100% {
    transform: translateY(0);
  }
}

@keyframes vote-succeeded-text {
  0% {
    transform: translateY(100px);
  }

  30% {
    transform: translateY(0px);
  }

  60% {
    transform: translateY(0px);
  }

  100% {
    transform: translateY(-48px);
  }
}

@keyframes vote-succeeded-count {
  0% {
    top: -20px;
    transform: scale(1);
  }

  50% {
    top: -30px;
  }

  100% {
    top: -20px;
  }
}

@keyframes vote-submitted {
  0% {
    width: 48px;
  }

  50% {
    width: 96px;
  }

  100% {
    width: 48px;
  }
}

